--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        <div class="container">
+          <button type="submit" class="btn btn-primary">submit</button>
+          <button type="button" class="btn btn-success">Success</button>
+        </div>
       </div>
       <div class="container h-20">
         <div class="row align-items-center h-20">
