--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-        <div class="container">
+        <div class="container m-3 d-flex justify-content-around">
           <button type="submit" class="btn btn-primary">submit</button>
           <button type="button" class="btn btn-success">Success</button>
         </div>
